<h1>corriger </h1>
/////Corriger

# Ce script Gnuplot génere un histograe à partir d'un fichier CSV.
filenae ="
set datafile separator ":"

# Détermine si le graphe a des négative/positive nombres ou non 
stats filename using 4 nooutput
negative = (STATS_min < 0)
positive = (STATS_max > 0)

# graph y range 
y_min = (STATS_min == STATS_max ? STATS_min - abs(STATS_min) * 0.1 : STATS_min) - abs(STATS_min) * 0.2
y_max = (STATS_min == STATS_max ? STATS_max + abs(STATS_max) * 0.1 : STATS_max) + abs(STATS_max) * 0.2
# set the graph y range
set yrange [y_min:y_max]


# Conditionnal plot
if (negative && positive) {
     plot filename using (column(4) < 0 ? $4 : 1/0):xtic(1) title "Négative Valeurs" linecolor rgb "red", \
     filename using (column(4) >= 0 ? $4 : 1/0):xtic(1) title "Positive Valeurs" linecolor rgb "green"
} else {
     if (negative) {
          plot filename using ($4 < 0 ? $4 : 1/0):xtic(1) title "Négative Valeurs" linecolor rgb "red"
     }

     if (positive) {
          plot filename using ($4 >= 0 ? $4 : 1/0):xtic(1) title "Positive Valeurs" linecolor rgb "green"
     }

}
